5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1815_2565.log
== TEST (2019-06-08 13:08:50) 
-- CODE:
from numpy import*

media=array(eval(input("informe as medias: ")))
presenca=array(eval(input("informe as presenças: ")))
carga_horaria=int(input(" "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:09:08) 
-- CODE:
from numpy import*

media=array(eval(input("informe as medias: ")))
presenca=array(eval(input("informe as presencas: ")))
carga_horaria=int(input(" "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 13:26:57) 
-- CODE:
from numpy import*

media=array(eval(input("informe as medias: ")))
frequencias=array(eval(input("informe as frequencias: ")))
carga_horaria=int(input(" "))
cont=0

v_aux=zeros(3, dtype=int)

from i in media:
	if((i>=5)and(frequencias[cont]>=0,75*carga_horaria)):
		v_aux[0]=v_aux[0]+1
	elif((i<5)and(frequencias[cont]>=0,75*carga_horaria)):
		v_aux[1]=v_aux[1]+1
	elif((i>=)and(frequencias[cont]<0,75*carga_horaria)):
		v_aux[2]=v_aux[2]+1
	cont=cont+1

print(v_aux)	

-- EXECUTION TIME:
0.67967
-- ERROR:
  File "/home/codebench/codes/1815/2565/main.py", line 10
    from i in media:
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:27:03) 
-- CODE:
from numpy import*

media=array(eval(input("informe as medias: ")))
frequencias=array(eval(input("informe as frequencias: ")))
carga_horaria=int(input(" "))
cont=0

v_aux=zeros(3, dtype=int)

from i in media:
	if((i>=5)and(frequencias[cont]>=0,75*carga_horaria)):
		v_aux[0]=v_aux[0]+1
	elif((i<5)and(frequencias[cont]>=0,75*carga_horaria)):
		v_aux[1]=v_aux[1]+1
	elif((i>=)and(frequencias[cont]<0,75*carga_horaria)):
		v_aux[2]=v_aux[2]+1
	cont=cont+1

print(v_aux)	

-- ERROR:
File "XXXX", line 10
    from i in media:
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 13:27:26) 
-- CODE:
from numpy import*

media=array(eval(input("informe as medias: ")))
frequencias=array(eval(input("informe as frequencias: ")))
carga_horaria=int(input(" "))
cont=0

v_aux=zeros(3, dtype=int)

for i in media:
	if((i>=5)and(frequencias[cont]>=0,75*carga_horaria)):
		v_aux[0]=v_aux[0]+1
	elif((i<5)and(frequencias[cont]>=0,75*carga_horaria)):
		v_aux[1]=v_aux[1]+1
	elif((i>=)and(frequencias[cont]<0,75*carga_horaria)):
		v_aux[2]=v_aux[2]+1
	cont=cont+1

print(v_aux)	

-- EXECUTION TIME:
0.785489
-- ERROR:
  File "/home/codebench/codes/1815/2565/main.py", line 15
    elif((i>=)and(frequencias[cont]<0,75*carga_horaria)):
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:27:32) 
-- CODE:
from numpy import*

media=array(eval(input("informe as medias: ")))
frequencias=array(eval(input("informe as frequencias: ")))
carga_horaria=int(input(" "))
cont=0

v_aux=zeros(3, dtype=int)

for i in media:
	if((i>=5)and(frequencias[cont]>=0,75*carga_horaria)):
		v_aux[0]=v_aux[0]+1
	elif((i<5)and(frequencias[cont]>=0,75*carga_horaria)):
		v_aux[1]=v_aux[1]+1
	elif((i>=)and(frequencias[cont]<0,75*carga_horaria)):
		v_aux[2]=v_aux[2]+1
	cont=cont+1

print(v_aux)	

-- ERROR:
File "XXXX", line 15
    elif((i>=)and(frequencias[cont]<0,75*carga_horaria)):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:27:45) 
-- CODE:
from numpy import*

media=array(eval(input("informe as medias: ")))
frequencias=array(eval(input("informe as frequencias: ")))
carga_horaria=int(input(" "))
cont=0

v_aux=zeros(3, dtype=int)

for i in media:
	if((i>=5)and(frequencias[cont]>=0,75*carga_horaria)):
		v_aux[0]=v_aux[0]+1
	elif((i<5)and(frequencias[cont]>=0,75*carga_horaria)):
		v_aux[1]=v_aux[1]+1
	elif((i>=5)and(frequencias[cont]<0,75*carga_horaria)):
		v_aux[2]=v_aux[2]+1
	cont=cont+1

print(v_aux)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 13:27:50) 
-- CODE:
from numpy import*

media=array(eval(input("informe as medias: ")))
frequencias=array(eval(input("informe as frequencias: ")))
carga_horaria=int(input(" "))
cont=0

v_aux=zeros(3, dtype=int)

for i in media:
	if((i>=5)and(frequencias[cont]>=0,75*carga_horaria)):
		v_aux[0]=v_aux[0]+1
	elif((i<5)and(frequencias[cont]>=0,75*carga_horaria)):
		v_aux[1]=v_aux[1]+1
	elif((i>=5)and(frequencias[cont]<0,75*carga_horaria)):
		v_aux[2]=v_aux[2]+1
	cont=cont+1

print(v_aux)	

-- EXECUTION TIME:
1.16591
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[5 0 0]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[7 0 0]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[9 1 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:27:52) 
-- CODE:
from numpy import*

media=array(eval(input("informe as medias: ")))
frequencias=array(eval(input("informe as frequencias: ")))
carga_horaria=int(input(" "))
cont=0

v_aux=zeros(3, dtype=int)

for i in media:
	if((i>=5)and(frequencias[cont]>=0,75*carga_horaria)):
		v_aux[0]=v_aux[0]+1
	elif((i<5)and(frequencias[cont]>=0,75*carga_horaria)):
		v_aux[1]=v_aux[1]+1
	elif((i>=5)and(frequencias[cont]<0,75*carga_horaria)):
		v_aux[2]=v_aux[2]+1
	cont=cont+1

print(v_aux)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:30:39) 
-- CODE:
from numpy import*

media=array(eval(input("informe as medias: ")))
frequencias=array(eval(input("informe as frequencias: ")))
carga_horaria=int(input(" "))
cont=0

v_aux=zeros(3, dtype=int)

for i in media:
	if((i>=5)and(frequencias[cont]>=(0,75*carga_horaria))):
		v_aux[0]=v_aux[0]+1
	elif((i<5)and(frequencias[cont]>=(0,75*carga_horaria))):
		v_aux[1]=v_aux[1]+1
	elif((i>=5)and(frequencias[cont]<(0,75*carga_horaria))):
		v_aux[2]=v_aux[2]+1
	cont=cont+1

print(v_aux)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:33:50) 
-- CODE:
from numpy import*

media=array(eval(input("informe as medias: ")))
frequencias=array(eval(input("informe as frequencias: ")))
carga_horaria=int(input(" "))
cont=0

v_aux=zeros(3, dtype=int)

for i in media:
	if((i>=5)and(frequencias[cont]>=0,75*carga_horaria)):
		v_aux[0]=v_aux[0]+1
	elif((i<5)and(frequencias[cont]>=(0,75*carga_horaria))):
		v_aux[1]=v_aux[1]+1
	elif((i>=5)and(frequencias[cont]<(0,75*carga_horaria))):
		v_aux[2]=v_aux[2]+1
	cont=cont+1

print(v_aux)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:37:13) 
-- CODE:
from numpy import*

media=array(eval(input("informe as medias: ")))
frequencias=array(eval(input("informe as frequencias: ")))
carga_horaria=int(input(" "))
cont=0
v_aux=zeros(3, dtype=int)
porcentagem=0,75*carga_horaria
for i in media:
	if((i>=5)and(frequencias[cont]>=0,75*carga_horaria)):
		v_aux[0]=v_aux[0]+1
	elif((i<5)and(frequencias[cont]>=(0,75*carga_horaria))):
		v_aux[1]=v_aux[1]+1
	elif((i>=5)and(frequencias[cont]<(0,75*carga_horaria))):
		v_aux[2]=v_aux[2]+1
	cont=cont+1

print(porcentagem)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:39:56) 
-- CODE:
from numpy import*

media=array(eval(input("informe as medias: ")))
frequencias=array(eval(input("informe as frequencias: ")))
carga_horaria=int(input(" "))
cont=0
v_aux=zeros(3, dtype=int)
porcentagem=(75/100)*carga_horaria
for i in media:
	if((i>=5)and(frequencias[cont]>=0,75*carga_horaria)):
		v_aux[0]=v_aux[0]+1
	elif((i<5)and(frequencias[cont]>=(0,75*carga_horaria))):
		v_aux[1]=v_aux[1]+1
	elif((i>=5)and(frequencias[cont]<(0,75*carga_horaria))):
		v_aux[2]=v_aux[2]+1
	cont=cont+1

print(porcentagem)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 13:41:47) 
-- CODE:
from numpy import*

media=array(eval(input("informe as medias: ")))
frequencias=array(eval(input("informe as frequencias: ")))
carga_horaria=int(input(" "))
cont=0
v_aux=zeros(3, dtype=int)
porcentagem=(75/100)*carga_horaria
for i in media:
	if((i>=5)and(frequencias[cont]>porcentagem)):
		v_aux[0]=v_aux[0]+1
	elif((i<5)and(frequencias[cont]>=porcentagem)):
		v_aux[1]=v_aux[1]+1
	elif((i>=5)and(frequencias[cont]<porcentagem)):
		v_aux[2]=v_aux[2]+1
	cont=cont+1

print(v_aux)	

-- EXECUTION TIME:
1.19117
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[1 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[4 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
informe as medias: informe as frequencias:  [4 1 4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:41:54) 
-- CODE:
from numpy import*

media=array(eval(input("informe as medias: ")))
frequencias=array(eval(input("informe as frequencias: ")))
carga_horaria=int(input(" "))
cont=0
v_aux=zeros(3, dtype=int)
porcentagem=(75/100)*carga_horaria
for i in media:
	if((i>=5)and(frequencias[cont]>porcentagem)):
		v_aux[0]=v_aux[0]+1
	elif((i<5)and(frequencias[cont]>=porcentagem)):
		v_aux[1]=v_aux[1]+1
	elif((i>=5)and(frequencias[cont]<porcentagem)):
		v_aux[2]=v_aux[2]+1
	cont=cont+1

print(v_aux)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 13:44:54) 
-- CODE:
from numpy import*

media=array(eval(input("informe as medias: ")))
frequencias=array(eval(input("informe as frequencias: ")))
carga_horaria=int(input(" "))
cont=0
v_aux=zeros(3, dtype=int)
porcentagem=(75/100)*carga_horaria
for i in media:
	if((i>=5)and(frequencias[cont]>=porcentagem)):
		v_aux[0]=v_aux[0]+1
	elif((i<5)and(frequencias[cont]>=porcentagem)):
		v_aux[1]=v_aux[1]+1
	elif((i>=5)and(frequencias[cont]<porcentagem)):
		v_aux[2]=v_aux[2]+1
	cont=cont+1

print(v_aux)	

-- EXECUTION TIME:
0.977518
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
